--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,6 @@ jobs:
         run: echo "Hola Mundo"
       - name : Bienvenido
         run : echo "Clase de git action"
+      - name : Bienveni
+        run : echo "Clase de git action2"
 
